k8s/apps/base/matrix/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  labels:
    app: synapse
spec:
  ports:
  - name: http
    port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    app: synapse
